minor w3c validation tweaks

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,22 +1,25 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"> -->
 <html>
-<head><title>fILL</title>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>fILL</title>
 
-<!--[if lt IE 9]>
-  <script>
-    var e = ("abbr,article,aside,audio,canvas,datalist,details," +
+  <!--[if lt IE 9]>
+    <script>
+      var e = ("abbr,article,aside,audio,canvas,datalist,details," +
       "figure,footer,header,main,mark,menu,meter,nav,output," +
       "progress,section,time,video").split(',');
-    for (var i = 0; i < e.length; i++) {
-      document.createElement(e[i]);
-    }
-  </script>
-<![endif]-->
+      for (var i = 0; i < e.length; i++) {
+	 document.createElement(e[i]);
+      }
+    </script>
+  <![endif]-->
 
-<!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
-<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
-<link type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
-<link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css">
+  <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
+  <link type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
+  <link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css">
 
 </head>
 
@@ -27,7 +30,7 @@
     <header role="banner">
 
       
-        <div id="fill-logo"><img src="/img/fill-logo.png" alt="fill"></div>
+        <div id="fill-logo"><img src="/img/fill-logo.png" alt="fill"/></div>
         <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
      
 
@@ -44,7 +47,7 @@
   <!-- Content -->
 
   <div id="aside-img-welcome">
-    <img src='/img/card_catalogue.jpg'>
+    <img src='/img/card_catalogue.jpg'/>
     <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
   </div>
 
