--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -66,7 +66,7 @@
   <footer role="contentinfo">
 
   <div id="nav2">
-    <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a>|<a href="?authen_logout=1">Log out</a>
+    <a href="/cgi-bin/lightning.cgi?rm=environment_form">ENV display</a>|<a href="?authen_logout=1">Log out</a>
     <p><TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library"></p>
   </div>
 
