--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>fILL</title>
+  <title>fILL on Saiph</title>
 
   <!--[if lt IE 9]>
     <script>
