first crack at a couple of w3c validation tweaks

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,7 +29,7 @@
 
       
         <div id="fill-logo"><img src="/img/fill-logo.png" alt="fill"/></div>
-        <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
+        <div id="fill-tagline"><p>connecting libraries, serving patrons.</p></div>
      
 
     </header>
