--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -89,7 +89,7 @@ $('document').ready(function(){
 
     <div id="header-left">
       <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
-      <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
+      <div id="fill-tagline"><p>connecting libraries, serving patrons.</p></div>
     </div>
 
     <div id="header-right">
