--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -122,8 +122,7 @@ $('document').ready(function(){
   <p>To use fILL you will need to create an account.  All you need is a valid Manitoba public library card.</p>
   <p>Creating an account is easy... 
     <ol>
-      <li>From the Welcome page, click the "Library Patrons" button</li>
-      <li>On the login page, click the "Sign up!" button</li>
+      <li>On the login page, click the "Sign up now" link</li>
       <li>Follow the instructions to select your home library</li>
       <li>Enter your name and library card number, and choose a username and password</li>
     </ol>
