working for all but firefox

--- a/htdocs/chat-test.html
+++ b/htdocs/chat-test.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function(){
     //create a new WebSocket object.
-    var wsUri = "wss://localhost/app/ws/";  
+    var wsUri = "wss://rigel.gotdns.org/app/ws/";  
     websocket = new WebSocket(wsUri);
    
     websocket.onopen = function(ev) { // connection is open
