new wording for the patron new-to-fill message

--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -118,20 +118,19 @@ $('document').ready(function(){
   <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your public library.</p>
   <p>fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you request an item through fILL your local library staff will try to borrow the item from the lending library for you.</p>
 
-  <h2>Creating an account</h2>
-  <p>To use fILL you will need to create an account.  All you need is a valid Manitoba public library card.</p>
-  <p>Creating an account is easy... 
+  <h2>Logging in to fILL</h2>
+  <p>To use fILL you will need a valid Manitoba public library card.</p>
+  <p>The first time you log in, you will need to:
     <ol>
-      <li>On the login page, click the "Sign up now" link</li>
-      <li>Follow the instructions to select your home library</li>
-      <li>Enter your name and library card number, and choose a username and password</li>
+      <li>Choose the region of the Province where you live.  This will show you a list of cities and towns in that region which have public libraries.</li>
+      <li>Select the location where you are a library member.</li>
     </ol>
-  </p>
-  <p>When your account is created you will be able to log in and start using fILL.</p>
+    fILL will remember this (by storing a cookie on your computer), so you won't need to do it again.</p>
+  <p>Enter your library card number and PIN # (exactly as you would for logging in to your library's web site, or eLibraries Manitoba)</p>
 
   <h3>Privacy</h3>
   <p>
-    fILL does not keep a record of your search history nor  does it keep a record of request transactions after borrowed items are returned. Logging into your account is necessary in order for your library to validate the request; some non-identifying data may be retained for statistical purposes.
+    fILL does not keep a record of your search history nor  does it keep a record of request transactions after borrowed items are returned. Logging in is necessary in order for your library to validate the request; some non-identifying data may be retained for statistical purposes.
   </p>
 </div><!--div id main info right-->
 
