--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -114,8 +114,8 @@ $('document').ready(function(){
 
   <div id="main-info-right" class="tone-box">
   <h2>About fILL</h2>
-  <p>fILL is the interlibrary loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
-  <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your public library.</p>
+  <p>fILL is the interlibrary loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba's libraries.</p>
+  <p>If you are unable to find an item after searching your library's catalogue you can use fILL to find it online and have it delivered to your public library.</p>
   <p>fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you request an item through fILL your local library staff will try to borrow the item from the lending library for you.</p>
 
   <h2>Logging in to fILL</h2>
